FUTURE RELEASES:

x Software Memory Manager.
x Software Scan.
x Band Map.
x DCS and CTCSS controls.
x Allow changing working frequency while in TX mode.
x Add the possibility to suspend rig command execution
  without shutting down the daemon, ie. without closing
  connection to the rig. The statusbar contains a small
  indicator showing the status.
x Auto-Tune: When mouse button is pressed and held down, grig will
  start tuning automatically.
x Special functions (RIG_FUNC_XXX).
x Support for external tuning knobs: Powermate, other?
x Service layer watchdog.
x Windows build files are now included in the source tarball.


GRIG 0.7.2:

- Fixed bug that caused wrong handling of RF gain, IF shift, MIC gain,
  and compressor controls (bug #1613622).
- Give volume level control higher priority to avoid jumpy behaviour
  (bug #1616926).


GRIG 0.7.1:

- A bug that caused installation to fail has been fixed (#1523367).


GRIG 0.7.0:

- Added receiver and transmitter level controls.
- Fixed bug that caused installation errors when using autoconf 2.59e.
- Pixmaps are now installed to /usr/local/share/pixmaps/grig instead of
  /usr/local/share/grig/pixmaps by default (related to the above bug).


GRIG 0.6.0:

- Save and restore RIG state.
- RF power meter scale is now functional with ranges of 5, 10, 50, 100
  and 500 watts. There is currently a bug, which causes the meter needle
  to jump up when switching between RX/TX.
- Fixed bug, which caused the frequency reading to flicker between the
  current value and a previously set value (bug #1388342). Same bug was
  found for the PTT and POWER controls, too.
- Fixed bug, which gave the error message "Can not find VFO list for this
  rig! Bug in backend?" if the rig did not have any of the rig_set_vfo or
  rig_get_vfo functions (bug #1440876).
- Better error messages when a command fails to execute.
- Fixed bug, which blocked the debug handler to properly filter messages