@@ -1,5 +1,6 @@
 FUTURE RELEASES:
 
+x Rig selector dialogue at startup.
 x Software Memory Manager.
 x Software Scan.
 x Band Map.
